# Squares

./: .gitignore  Cargo.toml  notes.txt  readme.md  test.rs
rocket/: .env  Cargo.toml
rocket/migrations/2019-04-02-125904_cells/: down.sql  up.sql
rocket/src/: cell.rs  db.rs  main.rs  schema.rs
squares/: Cargo.toml
squares/src/: _main.rs  cell.rs  lib.rs  main.rs
squares/src/lib/: _mod.rs  api.rs  cell.rs  data.rs  err.rs  mod.rs  requests.rs
squares_cont/src/: main.rs
squares_test/: Cargo.toml
squares_test/src/: main.rs  main0.rs
src/: cell.rs  main.rs
src/lib/: cell.rs  data.rs  mod.rs
