[package]
name = "rocket"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde ="^1.0"
serde_json ="^1.0"
serde_derive ="^1.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
r2d2 = "*"
dotenv = "*"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
